Jumpto scroll fix, added icons to user menu and, icons/phone and address

--- a/app/assets/stylesheets/dashboard.css.less
+++ b/app/assets/stylesheets/dashboard.css.less
@@ -547,6 +547,7 @@
       &.affiliation { background:transparent url(/assets/icons/affiliation.svg) left 1px no-repeat; }
       &.status { background:transparent url(/assets/icons/status.svg) left 1px no-repeat; }
       &.website_url { background:transparent url(/assets/icons/website_org.svg) left 1px no-repeat; }
+      &.address { background:transparent url(/assets/icons/address.svg) left 1px no-repeat; }
       &.email { background:transparent url(/assets/icons/email.svg) left 1px no-repeat; }
       &.phone { background:transparent url(/assets/icons/phone.svg) left 1px no-repeat; }
       &.organizations { 
